deploy/overlays/secretserver-syd/postgrest-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secretserver-postgrest
spec:
  replicas: 1
