deploy/overlays/secretserver-syd/redis-url.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secretserver-app
spec:
  template:
    spec:
      containers:
        - name: app
